--- a/history.html
+++ b/history.html
@@ -32,7 +32,7 @@
         </div>
     </header>
 
-    <section class="history-hero parallax" style="background-image: url('images/history_hero_texture.jpg');">
+    <section class="history-hero parallax" style="background-image: url('images/granite.webp');">
         <div class="hero-overlay">
             <span class="chapter-tag">Our Story</span>
             <h1>Beyond Imagination & Creativity</h1>
@@ -48,8 +48,6 @@
     
     <div class="timeline-line"></div>
 
-    <section class="chapter vintage-chapter" id="origin">
-
         <section class="chapter vintage-chapter" id="origin">
             <div class="content-box left">
                 <div class="date-badge">Chapter 1: The Origin</div>
@@ -64,7 +62,7 @@
                 <p>From a small home studio improvised within a storage room, he produced the landscape paintings, portraits, and hand-lettered signboards that dotted the town. Yet, this was not art for art’s sake alone; it was a labor of love born of the need to support his family. Even then, the spark of innovation was visible, as Lamar moved beyond the brush to employ block prints and multi-color stencils.</p>
             </div>
             <div class="image-box right tilt-left">
-                <img src="images/old_shop_1999.jpg" alt="The Original Shop" class="polaroid-img sepia-filter">
+                <img src="slide1.jpg" alt="The Original Shop" class="polaroid-img sepia-filter">
                 <span class="img-caption">The First Studio</span>
             </div>
         </section>
@@ -145,7 +143,7 @@
                 <p>The struggle remains, but it is fueled by a determination to honor the elders. It is a commitment to serve the people of Jowai, striving always to go <em>Beyond Imagination and Creativity.</em></p>
             </div>
             <div class="image-box right tilt-left">
-                <img src="images/revival_team.jpg" alt="The New Generation" class="polaroid-img">
+                <img src="slide4.jpg" alt="The New Generation" class="polaroid-img">
                 <span class="img-caption">The Legacy Continues</span>
             </div>
         </section>
@@ -293,6 +291,7 @@
         © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
     </div>
 </footer>
+
 
 
 
