--- a/history.html
+++ b/history.html
@@ -156,7 +156,7 @@
             </div>
         </section>
 
-    <section class="squad-section">
+    </div> <section class="squad-section">
     <h2 class="modern-title">The Current Squad</h2>
     <p class="squad-sub">Swipe to see the team &rarr;</p>
     
@@ -291,6 +291,7 @@
         © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
     </div>
 </footer>
+
 
 
 
