--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
+                <li><a href="history.html">Gallery</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
@@ -150,3 +151,4 @@
     </script>
 </body>
 </html>
+
