--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,9 @@
                 <li><a href="history.html">History</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
+            
+            <a href="https://wa.me/919862330569" class="cta-button">Get a Quote</a>
+            
         </div>
     </header>
 
@@ -151,4 +154,5 @@
     </script>
 </body>
 </html>
+
 
