--- a/history.html
+++ b/history.html
@@ -29,6 +29,9 @@
                 <li><a href="history.html" class="active">History</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+            
+          <a href="https://wa.me/919862330569" class="cta-button">Get a Quote</a>
+            
         </div>
     </header>
 
@@ -291,6 +294,7 @@
         © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
     </div>
 </footer>
+
 
 
 
