--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="history.html">Gallery</a></li>
-                <li><a href="history.html">History</a></li>
+                <li><a href="history.html">Our History</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
             
@@ -154,5 +154,6 @@
     </script>
 </body>
 </html>
+
 
 
