--- a/history.html
+++ b/history.html
@@ -26,7 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="history.html" class="active">History</a></li>
+                <li><a href="history.html" class="active">Our History</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             
@@ -294,6 +294,7 @@
         © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
     </div>
 </footer>
+
 
 
 
