--- a/finearts.html
+++ b/finearts.html
@@ -347,6 +347,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="history.html">History</a></li>
             <li><a href="finearts.html" class="active" style="color:var(--gold)">Fine Arts</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -509,6 +510,7 @@ function toggleGrid(gridId, btn) {
     </script>
 </body>
 </html>
+
 
 
 
